--- a/html/navigation/scheme.html
+++ b/html/navigation/scheme.html
@@ -71,7 +71,7 @@
     </div>
     <div class="about-footer">
         <p>深圳市南山区科技园东方科技大厦816室</p>
-        <p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
+        <p>Copyright ©2017 深圳市深脑科技有限公司 版权所有 粤ICP备 11298888号-6</p>
     </div>
 
     <!-- 联系我们弹窗 -->
