--- a/editBI.html
+++ b/editBI.html
@@ -711,13 +711,13 @@
 							</ul>
 						</div>
 						<!--层级-->
-						<div class="hierarchy">
+						<div class="level">
 
 						</div>
 					</div>
 					<!--度量-->
 					<div class="set-param-head"><span>度量</span></div>
-					<div class="metric-box same-resource">
+					<div class="metric-box same-resource" id="metricBox">
 						<!--原始字段-->
 						<div class="original">
 							<div class="dimension-title">
