--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -422,8 +422,8 @@
 		//根据fromTable获取fields
 		function fn_get_fields_by_fromTable(fromTable) {
 			var fieldOut;
-			$.each(actionComps, function () {
-				if (this.tableOut == fromTable) {
+			$.each(actionComps, function (i,item) {
+				if (item.tableOut == fromTable) {
 					fieldOut = this.fieldOut;
 					return true;
 				}
@@ -610,6 +610,7 @@
 				contentType: "application/json",
 				data: JSON.stringify(parameter),
 				success: function (data) {
+					console.log(data.data)
 					actionComps = data.data;
 				}
 			});
