修改滚动条动画

--- a/main.html
+++ b/main.html
@@ -421,7 +421,7 @@
     <script src="js/tree.js"></script>
 		<script>
 			$(function(){
-				$(".g-folders").mCustomScrollbar({theme:"dark"});
+				$(".g-folders").mCustomScrollbar({theme:"dark",autoHideScrollbar:true,scrollInertia:200});
 			});
 
 		</script>
