修改之前的bug

--- a/html/preview.html
+++ b/html/preview.html
@@ -25,7 +25,7 @@
     <div class="chart-main-box">
         <div class="edit-content">
             <div class="m-html-mod-box">
-                <div class="m-html-mod">
+                <div class="m-html-mod  m-html-mod0">
                     <div class="mn-header">
                         <a href="#" class="mn-logobox">
                             <img src="../images/mlogo.png" alt="" />
