--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -424,7 +424,8 @@
 			var fieldOut;
 			$.each(actionComps, function (i,item) {
 				if (item.tableOut == fromTable) {
-					fieldOut = this.fieldOut;
+					// fieldOut = this.fieldOut;
+					fieldOut = this.attValue;
 					return true;
 				}
 			});
@@ -502,15 +503,15 @@
 		}
 
 		function fn_set_extractFields(extractFields) {
-			var extractFieldHtml = $('.extractField').prop('outerHTML');
-			$('.extractField').remove();
+			// var extractFieldHtml = $('.extractField').prop('outerHTML');
+			// $('.extractField').remove();
 			$.each(extractFields, function () {
 				var table = this.table;
 				var field = this.field;
 				var alias = this.alias;
 				var fn = this.fn;
 				//alert(extractFieldHtml)
-				$('.extractFields').append(extractFieldHtml);
+				// $('.extractFields').append(extractFieldHtml);
 
 				var extractField = $('.extractField:last');
 				extractField.find('.table').val(table);
@@ -539,6 +540,17 @@
 			});
 			return ary;
 		}
+
+		// function fn_get_joinFields() {
+		// 	var arys = [];
+		// 	$('joinField').each(function () {
+		// 		var datas = {};
+		// 		var tables = $(this).find('.table').val();
+		// 		var fields = $(this).find('.field').val();
+		// 		var aliass = $(this).find('.alias').val();
+		// 		var 
+		// 	})
+		// }
 
 		function fn_saveActionComp_exec(val) {
 			val['actionId'] = this_actionId;
