--- a/plugin/webContent/join/join.html
+++ b/plugin/webContent/join/join.html
@@ -194,13 +194,13 @@
         </thead>
         <tbody class="onFilters">
         <tr class="onFilter">
-            <td><select class="field1 auto_save"></select></td>
-            <td>
+            <td style="width: 33%"><select class="field1 auto_save"></select></td>
+            <td style="width: 33%">
                 <select class="expr auto_save">
                 <option>=</option><option><</option><option>></option><option><=</option><option>>=</option>
                 </select>
             </td>
-            <td><select class="field2 auto_save"></select></td>
+            <td style="width: 33%"><select class="field2 auto_save"></select></td>
             <td class="regulation"><span class="add joinsAdd auto_save"></span><span class="lessen joinsLessen auto_save"></span></td>
         </tr>
         </tbody>
@@ -217,9 +217,9 @@
                 <th>别名</th>
             </tr>
         </thead>
-        <tbody class="joinFields">
-            <tr class="joinField">
-                <td><select class="table auto_save"></select></td>
+        <tbody class="extractFields">
+            <tr class="extractField">
+                <td style="width: 33%"><select class="table auto_save"></select></td>
                 <td>
                     <select class="field auto_save"></select>
                 </td>
