--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -51,7 +51,7 @@
       var this_actionCompId;
       var this_actionCompName;
       var this_actionComp = '';
-      var this_data = {};
+      var this_data = [];
       var this_remark = '';
       var this_new = true; //新建
       var onenv = true;
@@ -169,7 +169,7 @@
 //          };
           //保存流程图
           demo.onBtnSaveClick = function () {
-//            console.log(Export())
+            console.log(Export())
             var jsons = {};
             jsons.jobId = jobid;
             jsons.isTemplate = JSON.parse(template);
@@ -190,9 +190,9 @@
                 if (data.code == 0) {
                   this_new = false;
                   layer.msg('保存成功',{time: 1000});
-                  setTimeout(function() {
-                    location.reload();
-                  },2000)
+                  // setTimeout(function() {
+                  //   location.reload();
+                  // },2000)
                 } else {
                   layer.msg(data.message,{time: 1000})
                 }
@@ -396,6 +396,7 @@
         }
 //        保存单个组件
         function fn_save(jsonStr) {
+          console.log(jsonStr)
           $.ajax({
             type:"POST",
             url:$url+'/api/jobComp/v1/save',///xdbd-etl
