--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>小道大数据平台</title>
+    <title>深脑大数据平台</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
    	<link rel="stylesheet" href="plugin/treeview/css/bootstrap.min.css" />
